# talkops-mcp

./: .gitignore  README.md
src/argo-rollout-mcp-server/: .gitignore  README.md  pyproject.toml
src/argo-rollout-mcp-server/argo_rollout_mcp_server/exceptions/: custom.py
src/argo-rollout-mcp-server/argo_rollout_mcp_server/prompts/: canary_deployment.py  multicluster_canary.py  onboarding_deployment.py
src/argo-rollout-mcp-server/argo_rollout_mcp_server/resources/: cluster_resources.py  health_resources.py  history_resources.py  metrics_resources.py
src/argo-rollout-mcp-server/argo_rollout_mcp_server/server/: __init__.py  bootstrap.py  core.py  middleware.py
src/argo-rollout-mcp-server/argo_rollout_mcp_server/services/: argo_rollouts_service.py  generator_service.py
src/argo-rollout-mcp-server/argo_rollout_mcp_server/tools/: __init__.py  registry.py
src/argo-rollout-mcp-server/docs/prompts/: PROMPT_REFERENCE.md
src/argo-rollout-mcp-server/docs/workflow-docs/: AB_TESTING_TEST_GUIDE.md  ARGOCD_GITOPS_TEST_GUIDE.md  ONBOARDING_TEST_GUIDE.md  REVERSE_MIGRATION_TEST_GUIDE.md  ZERO_DOWNTIME_MIGRATION_TEST_GUIDE.md
src/argo-rollout-mcp-server/tests/: test_named_port_resolution.py
src/argocd-mcp-server/: .dockerignore  .gitignore  Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.sh  pyproject.toml
src/argocd-mcp-server/argocd_mcp_server/: config.py  main.py
src/argocd-mcp-server/argocd_mcp_server/exceptions/: __init__.py  custom.py
src/argocd-mcp-server/argocd_mcp_server/prompts/: __init__.py  base.py  deployment_workflows.py  (+2 more)
src/argoflow-mcp-server/: .env.example  README.md  pyproject.toml
src/argoflow-mcp-server/argoflow_mcp_server/: config.py  main.py
src/helm-mcp-server/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
src/helm-mcp-server/helm_mcp_server/: __init__.py  config.py  main.py
src/kargo-mcp-server/: .dockerignore  .gitignore  README.md  pyproject.toml  test_kargo_beta_promo.py  test_kargo_endpoints.py  test_kargo_project_resources.py  test_kargo_promo.py
src/kargo-mcp-server/docs/: implementation_plan.md
src/kargo-mcp-server/kargo_mcp_server/: __init__.py  config.py  main.py
src/kargo-mcp-server/scripts/: get_kargo_token.py
src/kargo-mcp-server/tests/: __init__.py  conftest.py  test_bootstrap.py  test_config.py  test_kargo_service.py  test_models.py  test_prompts.py  test_resources.py  test_spec_builders.py  test_tools.py  test_utils.py
src/loki-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
src/loki-mcp-server/docs/: LOKI_ERROR_INVESTIGATION_TEST_GUIDE.md  LOKI_HEALTH_CHECK_TEST_GUIDE.md  LOKI_INCIDENT_RESPONSE_TEST_GUIDE.md  LOKI_LOGQL_BUILDER_TEST_GUIDE.md  LOKI_LOG_STRUCTURE_TEST_GUIDE.md  LOKI_PERFORMANCE_ANALYSIS_TEST_GUIDE.md  LOKI_SCHEMA_EXPLORATION_TEST_GUIDE.md  PROMPT_REFERENCE.md  WORKFLOW_JOURNEYS.md
src/loki-mcp-server/loki_mcp_server/: __init__.py  config.py  main.py
src/loki-mcp-server/tests/: conftest.py
src/prometheus-mcp-server/: .dockerignore  .pyrightconfig.json  Dockerfile  README.md  docker-entrypoint.sh  dump.json  probe.yaml  pyproject.toml
src/prometheus-mcp-server/docs/: PROMPT_REFERENCE.md  PROM_EXPORTER_TEST_GUIDE.md  PROM_FINOPS_TEST_GUIDE.md  PROM_K8S_RULE_CRD_TEST_GUIDE.md  PROM_ONBOARDING_TEST_GUIDE.md  PROM_QUERY_TEST_GUIDE.md  PROM_RULE_TEST_GUIDE.md  PROM_TROUBLESHOOTING_TEST_GUIDE.md  WORKFLOW_JOURNEYS.md
src/prometheus-mcp-server/prometheus_mcp_server/: __init__.py  config.py  main.py
src/prometheus-mcp-server/scripts/: generate_load.py
src/prometheus-mcp-server/tests/: __init__.py  conftest.py  test_bootstrap.py  test_config.py  test_integration.py  test_models.py  test_prometheus_service.py  test_prompts.py  test_resources.py  test_response_size.py  test_tools.py  test_utils.py
src/tempo-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
src/tempo-mcp-server/scripts/: jaeger-ui.yaml  otel-demo-values-slim.yaml  tempo-distributed-values.yaml  tempo-grpc-svc.yaml
src/tempo-mcp-server/tempo_mcp_server/: __init__.py  config.py  main.py
src/tempo-mcp-server/tests/: conftest.py
src/terraform-mcp-server/: .env.example  .gitignore  README.md  pyproject.toml
src/terraform-mcp-server/docs/: AWS_PROVIDER_RESOURCES.md  AWS_PROVIDER_TEST.md  terraform_document_ingestion_tool.md  terraform_document_search_tool.md  terraform_execution_tool.md
src/terraform-mcp-server/terraform_mcp_server/: __main__.py  ingestion_orchestrator.py  main.py  server.py  server_config.py
src/terraform-mcp-server/tests/: conftest.py  test_bootstrap.py  test_middleware_config.py  test_resources.py  test_tool_registry.py
src/terraform-mcp-server/tickets/: README.md  TF-MCP-01-dependencies-and-pyproject.md  TF-MCP-02-server-skeleton.md  TF-MCP-03-tool-registry-and-base.md  TF-MCP-04-tool-modules-and-services.md  TF-MCP-05-mcp-resources.md  TF-MCP-06-server-config.md  TF-MCP-07-base-tool-migration.md  TF-MCP-08-tests.md  TF-MCP-09-cli-entry-and-cleanup.md  TF-MCP-10-docs-and-operators.md
src/traefik-mcp-server/: .gitignore  .pyre_configuration  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
src/traefik-mcp-server/docs/: PROMPT_REFERENCE.md  TRAEFIK_HEADER_CANARY_TEST_GUIDE.md  TRAEFIK_NGINX_MIGRATION_TEST_GUIDE.md  TRAEFIK_REAL_WORLD_SCENARIO.md  TRAEFIK_SHADOW_LAUNCH_TEST_GUIDE.md  TRAEFIK_TCP_ROUTING_TEST_GUIDE.md  TRAEFIK_TRAFFIC_MANAGEMENT_TEST_GUIDE.md  WORKFLOW_JOURNEYS.md
src/traefik-mcp-server/scripts/: test_traffic_middleware.py
src/traefik-mcp-server/tests/: __init__.py  test_gateway_api_migrator.py  test_migration_agent_intelligence.py  test_migration_gaps.py  test_migration_output_contract.py  test_nginx_migration_apply_gateway_api.py  test_rollback.py  test_servers_transport_service.py  test_shadow_mode.py  test_traefik_middleware_builders.py  test_weighted_route_header_cookie_match.py
src/traefik-mcp-server/traefik_mcp_server/: config.py  main.py  traefik_middleware_builders.py
(+734 files in other folders)
