[project]
name = "talkops-helm-mcp-server"
version = "0.4.1"
description = "A Model Context Protocol (MCP) server for managing Kubernetes workloads via Helm."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "TalkOps", email = "contact@talkops.ai"},
]
keywords = ["mcp", "helm", "kubernetes", "k8s", "devops", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.13.3",
    "kubernetes>=34.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://talkops.ai"
Repository = "https://github.com/talkops-ai/talkops-mcp"
Documentation = "https://github.com/talkops-ai/talkops-mcp/tree/main/src/helm-mcp-server"
Issues = "https://github.com/talkops-ai/talkops-mcp/issues"
Changelog = "https://github.com/talkops-ai/talkops-mcp/releases"

[project.scripts]
helm-mcp-server = "helm_mcp_server.main:cli"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helm_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true
