[project]
name = "talkops-prometheus-mcp-server"
version = "0.1.11"
description = "A Model Context Protocol (MCP) server for Prometheus monitoring and observability."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "TalkOps", email = "contact@talkops.ai"},
]
keywords = ["mcp", "prometheus", "monitoring", "observability", "devops", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.13.3",
    "httpx>=0.28.0",
    "kubernetes>=35.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://talkops.ai"
Repository = "https://github.com/talkops-ai/talkops-mcp"
Documentation = "https://github.com/talkops-ai/talkops-mcp/tree/main/src/prometheus-mcp-server"
Issues = "https://github.com/talkops-ai/talkops-mcp/issues"
Changelog = "https://github.com/talkops-ai/talkops-mcp/releases"

[project.scripts]
prometheus-mcp-server = "prometheus_mcp_server.main:cli"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prometheus_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
exclude = [
    "reference"
]
