[project]
name = "terraform-mcp-server"
version = "0.1.0"
description = "MCP Server for Terraform Knowledge Graph — vector search, document ingestion, and secure command execution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.70",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.4",
    "langgraph-prebuilt>=0.5.2",
    "loguru>=0.7.3",
    "markdown>=3.8.2",
    "neo4j-graphrag[openai]>=1.8.0",
    "pdfminer-six>=20250506",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "pypdf2>=3.0.1",
    "unstructured>=0.18.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0"]

[project.scripts]
terraform-mcp-server = "terraform_mcp_server.main:main"
agents-mcp-server = "terraform_mcp_server.__main__:main"

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"