[project]
name = "argo-rollout-mcp-server"
version = "0.1.0"
description = "MCP Server for Argo Rollouts progressive delivery — create, manage, and monitor Rollouts with canary, blue-green, and rolling update strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.3",
    "kubernetes>=34.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
argo-rollout-mcp-server = "argo_rollout_mcp_server.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["argo_rollout_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true
